Add MyMPILib and MPI to cmake file.
These two libraries will be used (probably rather sooner than later)
thus search for them and set the necessary paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # List of source files are in CMakeSources.in.
 
 # Basic cmake settings/requirements
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 2.6)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
 # Basic project settings.
@@ -15,10 +15,29 @@ set (libneo_VERSION_MINOR 1)
 enable_language(Fortran)
 enable_testing()
 
+find_package(MPI REQUIRED)
+
 # Include file for the sources.
 include(CMakeSources.in)
 
-set(CMAKE_Fortran_FLAGS " -std=f2008")
+set(PROJLIBS /proj/plasma/Libs/ CACHE STRING "Common library path")
+set(MYMPILIB_PATH ${PROJLIBS}/MyMPILib/Build-Release/)
+
+if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
+
+  set (CMAKE_Fortran_FLAGS "-cpp -std=f2008")
+
+elseif (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
+
+  set (CMAKE_Fortran_FLAGS "-cpp -heap-arrays -stand f08")
+
+endif ()
+
+include_directories(${MPI_Fortran_INCLUDE_PATH})
+message(STATUS "The MPI_Fortran_INCLUDE_PATH is ${MPI_Fortran_INCLUDE_PATH}")
+include_directories(${MYMPILIB_PATH}/OBJS)
+
+find_library(MyMPILib_lib MyMPILib ${MYMPILIB_PATH})
 
 # Main goal (of the created build file): creating the library file.
 add_library(libneo SHARED ${SOURCE_FILES})
