Add cmake file for tests subfolder.
This includes calling it from the main cmake file.

Contrary to what I would have thought, the subfile, does not seem to
inherit the variables/paths/.. from the main file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,5 @@ find_library(MyMPILib_lib MyMPILib ${MYMPILIB_PATH})
 add_library(libneo SHARED ${SOURCE_FILES})
 
 #set_target_properties(libneo PROPERTIES VERSION ${libneo_VERSION})
+
+add_subdirectory(tests)
