--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,9 @@ add_test(Test_Build_Code make)
 add_test(NAME Test_arnoldi
          COMMAND ../tests/python_scripts/test_arnoldi.py && tests/test_arnoldi.x)
 set_tests_properties(Test_arnoldi PROPERTIES  FAIL_REGULAR_EXPRESSION "STOP")
+add_test(NAME Test_efit
+         COMMAND tests/test_efit_class.x)
+set_tests_properties(Test_efit PROPERTIES  FAIL_REGULAR_EXPRESSION "STOP")
 #~ # For testing purposes, e.g. printing the environment.
 #~ add_test(NAME run_xterm
          #~ COMMAND xterm)
