--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,16 @@ include_directories(${MPI_Fortran_INCLUDE_PATH})
 include_directories(${PROJECT_BINARY_DIR})
 include_directories(${MYMPILIB_PATH}/OBJS)
 
+if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
+
+  set (CMAKE_Fortran_FLAGS "-cpp -std=f2008")
+
+elseif (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
+
+  set (CMAKE_Fortran_FLAGS "-cpp -heap-arrays -stand f08")
+
+endif ()
+
 ### Path to OpenBLAS
 set(OPEN_BLAS_PATH /usr/lib/openblas-base/)
 set(OPEN_BLAS_LAPACK_LIB ${OPEN_BLAS_PATH})
@@ -27,5 +37,11 @@ target_link_libraries(test_arnoldi.x
   ${MAIN_LIB}
   ${MyMPILib_lib}
   ${MPI_Fortran_LIBRARIES}
+  ${LINALG_LIBRARIES}
+  )
+
+add_executable(test_efit_class.x source/test_efit_class.f90)
+target_link_libraries(test_efit_class.x
+  ${MAIN_LIB}
   ${LINALG_LIBRARIES}
   )
