--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -6,4 +6,6 @@ set(SOURCE_FILES
     src/io.f90
     src/libneo_kinds.f90
     src/odeint_allroutines.f90
+    src/rusage_type.f90
+    src/system_utility.f90
 )
