--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -52,7 +52,9 @@ target_link_libraries(test_boozer_class.x
   ${LINALG_LIBRARIES}
   )
 
-add_executable(test_system_utility.x source/test_system_utility.f90)
+add_executable(test_system_utility.x
+  source/test_system_utility.f90
+  ../src/local_rusage.c)
 target_link_libraries(test_system_utility.x
   ${MAIN_LIB}
   ${LINALG_LIBRARIES}
