--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -5,6 +5,7 @@ set(SOURCE_FILES
     src/arnoldi.f90
     src/io.f90
     src/libneo_kinds.f90
+    src/math_constants.f90
     src/odeint_allroutines.f90
     src/rusage_type.f90
     src/system_utility.f90
