Rename file to match module name.

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -6,7 +6,7 @@ set(SOURCE_FILES
     src/io.f90
     src/libneo_kinds.f90
     src/math_constants.f90
-    src/odeint_allroutines.f90
+    src/ode_integration.f90
     src/rusage_type.f90
     src/system_utility.f90
 
