New templates with better default values.

--- a/matlab/GPEC_interface/template/gpec.in
+++ b/matlab/GPEC_interface/template/gpec.in
@@ -38,7 +38,7 @@
    resp_index=0             ! Integer 0-4, determining method of inductance matrix formation. 0 uses energy identity, and is recommended.
    sing_spot=5e-4           ! Minimum distance to singular surface in (m-nq) space
    sing_npsi=100            ! Number of points between rational surfaces used for b-normal splines across sin_spot
-   reg_flag=f               ! Regularize the solution near resonant surfaces
+   reg_flag=t               ! Regularize the solution near resonant surfaces
    reg_spot=5e-2            ! Regularize by (m-nq)^2/((m-nq)^2+reg_spot^2)
    chebyshev_flag=f         ! Fit Chebyshev polynomials to the displacement.
    nche=20                  ! Number of Chebyshev polynomials used
@@ -46,7 +46,7 @@
 /
 &GPEC_OUTPUT
    jac_out=""               ! Coordinate system of outputs
-   jsurf_out=0              ! True(1) for area weighted outputs (only appends standard gpec_control output)
+   jsurf_out=1              ! True(1) for area weighted outputs (only appends standard gpec_control output)
    tmag_out=1               ! True(1) for magnetic toroidal angle outputs (affects singcoup and singfld, appends gpec_control)
    mlim_out=64              ! Fourier decomposed outputs will span -mlim_out<=m<=mlim_out when jac_out/=jac_type or tmag_out/=tmag_in
 
