Slightly modified templates.

--- a/matlab/GPEC_interface/template/dcon.in
+++ b/matlab/GPEC_interface/template/dcon.in
@@ -7,10 +7,11 @@
 
     sas_flag=t           ! Safety factor (q) limit determined as q_ir+dmlim where q_ir is the equil outermost rational
     dmlim=0.2            ! See sas_flag
-	!peak_flag=t          ! Stops integration at first local maximum beyond the last rational (may go beyond dmlim)
+	peak_flag=f          ! Stops integration at first local maximum beyond the last rational (may go beyond dmlim)
     qlow=1.02            ! Integration initiated at q determined by minimum of qlow and q0 from equil
     qhigh=20.2           ! Integration terminated at q limit determined by minimum of qhigh and qa from equil
     sing_start=0         ! Start integration at the sing_start'th rational from the axis (psilow)
+!DCON >vers 1.4    psiedge=0.988        ! If less then psilim, calculates dW(psi) between psiedge and psilim, then runs with truncation at max(dW)
 
     nn=2                 ! Toroidal mode number
     delta_mlow=12        ! Expands lower bound of Fourier harmonics
