Added flag for time evolution and stopping criterion for time steps.

--- a/matlab/BALANCE/blueprints/balance.in
+++ b/matlab/BALANCE/blueprints/balance.in
@@ -24,4 +24,5 @@
 67.5d0               #rb_cut_out
 68.d0               #re_cut_out 
 .false.  .true.       #write_formfactors
-
+.false.              #FLAG_RUN_TIME_EVOLUTION
+1.0d-9      #stop timestep for time evolution mode
