--- a/matlab/GPEC_interface/template/equil.in
+++ b/matlab/GPEC_interface/template/equil.in
@@ -9,12 +9,12 @@
 
     grid_type="ldp"      ! Radial grid packing of equilibrium quantities. Accepts rho, ldp or original. ldp packs points near the core and edge.
     psilow=1e-2          ! Minimum value of psi, normalized from 0 to 1
-    psihigh=0.993        ! Maximum value of psi, normalized from 0 to 1 - use 0.993
+    psihigh=0.999        ! Maximum value of psi, normalized from 0 to 1 - use 0.993
     mpsi=128             ! Number of radial grid intervals for equilibrium quantities
     mtheta=256           ! Number of equally spaced poloidal grid intervals for all splines
     newq0=0              ! Grad-Shafranov solution invariant adjustment of the q profile to give the specified value of q at the axis. Default 0 uses input file value.
     etol = 1e-07         ! Tolerance for direct equilibrium reconstruction of flux surfaces/coordinates
-    use_classic_splines = t ! Use a classical cubic spline instead of tri-diagonal solution for splines with extrapolation boundary conditions
+    use_classic_splines = f ! Use a classical cubic spline instead of tri-diagonal solution for splines with extrapolation boundary conditions
     use_galgrid = t      ! Use the same grid as galerkin method when regrid=.True.
     
     input_only=f         ! Generate information about the input and then quit with no further calculation
