--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 
-all: source
+all: source UserDoc
 
 # Generate doxygen documentation.
 source:
@@ -8,10 +8,14 @@ source:
 	@echo "---------------------------------------------------------------------------"
 	doxygen 1> doxygen.log 2> doxygen.err
 	make -C latex/ 1> latex.log 2> latex.err
-	cp latex/refman.pdf .
+	cp latex/refman.pdf ./
 	make -C latex/ clean
 	@echo "---------------------------------------------------------------------------"
 	@echo "...done."
+
+UserDoc:
+	make -C UserDoc
+	cp UserDoc/main.pdf ./UserDoc.pdf
 
 # Clean up.
 clean:
@@ -40,3 +44,5 @@ clean:
 	@echo make $@ with $< in $(<D);\
 	cd $(<D) ; pwd ;\
 	$(PS2PDF) $(<F) $(@F)
+
+.PHONY: all UserDoc clean
