Add doc coding_style, including means to make it.
Add a document for coding style of the group (first draft), and the
means to compile it.

The version of neo-2 should be removed soon. This was thought to be a
better place for the document.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 
-all: source UserDoc
+all: source UserDoc ExtraDocuments
 
 # Generate doxygen documentation.
 source:
@@ -16,6 +16,9 @@ source:
 UserDoc:
 	make -C UserDoc
 	cp UserDoc/main.pdf ./UserDoc.pdf
+
+ExtraDocuments:
+	make -C ExtraDocuments
 
 # Clean up.
 clean:
@@ -45,4 +48,4 @@ clean:
 	cd $(<D) ; pwd ;\
 	$(PS2PDF) $(<F) $(@F)
 
-.PHONY: all UserDoc clean
+.PHONY: all UserDoc ExtraDocuments clean
