--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore directories for building the code.
 [Bb]uild/*
 [Bb]uild-*/*
+# Build directories of tools.
+*/*/[Bb]uild-*/
 
 # Ignore error files and log files.
 *.err
