--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -8,6 +8,7 @@ set(SOURCE_FILES
     src/math_constants.f90
     src/ode_integration.f90
     src/rusage_type.f90
+    src/solve_system.f90
     src/system_utility.f90
 
     src/local_rusage.c
