Bugfix of hdf5 tools test.
Removing of file did not work as it was.
Current version relies on fortran 2008 feature and is not platform
independent.

A tested version with cmake would also have been platform dependent, and
was thus not used.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,9 +99,11 @@ set_tests_properties(Test_boozer PROPERTIES  FAIL_REGULAR_EXPRESSION "STOP")
 add_test(NAME Test_efit
          COMMAND tests/test_efit_class.x)
 set_tests_properties(Test_efit PROPERTIES  FAIL_REGULAR_EXPRESSION "STOP")
+
 add_test(NAME Test_hdf5_tools
-         COMMAND "tests/test_hdf5_tools.x" && "rm test_file.h5")
+         COMMAND "tests/test_hdf5_tools.x")
 set_tests_properties(Test_hdf5_tools PROPERTIES  FAIL_REGULAR_EXPRESSION "STOP")
+
 add_test(NAME Test_mympilib
          COMMAND tests/test_mympilib.x)
 set_tests_properties(Test_mympilib PROPERTIES  PASS_REGULAR_EXPRESSION "Derived initMaster")
