Updated docs and directory structure, make build path configurable

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,6 @@ src/*/*/version.f90
 .DS_Store
 
 # Ignore files created by the python build system
-python/libneo/build/
+python/build/
 *.egg-info/
+python/build/src.linux-aarch64-3.10/build/src.linux-aarch64-3.10/libneo/fortranobject.c
