Fix indentation and strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,18 +46,17 @@ find_program(NC_CONFIG "nf-config")
 
 if (NC_CONFIG)
 execute_process(COMMAND nf-config --includedir
-                OUTPUT_VARIABLE NETCDFINCLUDE_DIR)
+                OUTPUT_VARIABLE NETCDFINCLUDE_DIR
+                OUTPUT_STRIP_TRAILING_WHITESPACE)
 execute_process(COMMAND nc-config --libdir
-				OUTPUT_VARIABLE NETCDFLIB_DIR)
+                OUTPUT_VARIABLE NETCDFLIB_DIR
+                OUTPUT_STRIP_TRAILING_WHITESPACE)
 execute_process(COMMAND nf-config --flibs
-                OUTPUT_VARIABLE NETCDF_FLIBS)
+                OUTPUT_VARIABLE NETCDF_FLIBS
+                OUTPUT_STRIP_TRAILING_WHITESPACE)
 else()
 message(SEND_ERROR "nc-config not found. Please install libnetcdff-dev")
 endif()
-
-string(STRIP ${NETCDFINCLUDE_DIR} NETCDFINCLUDE_DIR)
-string(STRIP ${NETCDFLIB_DIR} NETCDFLIB_DIR)
-string(STRIP ${NETCDF_FLIBS} NETCDF_FLIBS)
 
 message(STATUS "NetCDF include path: " ${NETCDFINCLUDE_DIR})
 message(STATUS "NetCDF lib path: " ${NETCDFLIB_DIR})
@@ -76,7 +75,7 @@ add_subdirectory(src/hdf5_tools)
 # RKF45 from https://people.sc.fsu.edu/~jburkardt/
 # licenced under LGPL (see SRC/contrib/LICENSE.rkf45)
 add_library ( rkf45 SHARED
-	src/contrib/rkf45.f90
+  src/contrib/rkf45.f90
 )
 
 # Main goal (of the created build file): creating the library file.
