--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
 
       - name: Deps
         run: |
-          sudo sh install_deps.sh
+          sudo ./install_deps.sh
 
       - name: Build
         run: |
-          mkdir build && cd build && cmake .. && make
+          mkdir build && cd build && cmake .. && make -j2
 
       - name: Test
         run: |
